[DDW-614] Add rewards to wallet summary header

--- a/source/renderer/app/components/wallet/summary/WalletSummaryHeader.scss
+++ b/source/renderer/app/components/wallet/summary/WalletSummaryHeader.scss
@@ -47,6 +47,15 @@
   }
 }
 
+.rewards {
+  @extend %smallText;
+  height: auto;
+}
+
+.rewardsAmount {
+  font-family: var(--font-medium);
+}
+
 .transactionsCountWrapper {
   .numberOfTransactions,
   .numberOfPendingTransactions {
