--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -46,6 +46,7 @@
           opacity: 0.5;
         }
         .SimpleFormField_inputWrapper {
+          // TODO
           opacity: 0.5;
         }
       }
