--- a/source/renderer/app/components/wallet/WalletSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletSendForm.scss
@@ -70,16 +70,15 @@
   border-radius: 4px;
   color: var(--theme-button-flat-text-color);
   display: flex;
-  font-family: var(--font-regular);
+  font-family: var(--font-light);
   font-style: italic;
-  font-weight: 300;
   margin: 20px 0 30px 0;
   padding: 14px 20px;
   width: 100%;
 
   b {
     font-family: var(--font-medium);
-    font-weight: 500;
+    font-weight: normal;
   }
 }
 
