[DDW-860] Update line height

--- a/source/renderer/app/components/wallet/WalletSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletSendForm.scss
@@ -72,6 +72,7 @@
   display: flex;
   font-family: var(--font-light);
   font-style: italic;
+  line-height: 22px;
   margin: 20px 0 30px 0;
   padding: 14px 20px;
   width: 100%;
