--- a/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
+++ b/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
@@ -19,16 +19,11 @@
     .AutocompleteOverrides_autocompleteContent,
     .SimpleInput_customValueBlock,
     .SimpleInput_customValueWrapper,
-    .SimpleInput_input:not(:read-only),
-    .SimpleInput_input:focus:not(:read-only),
-    .SimpleInput_input:hover:not(:read-only),
+    .SimpleInput_input,
+    .SimpleInput_input:focus,
+    .SimpleInput_input:hover,
     .SimpleLink_root {
       background-color: transparent !important;
-    }
-
-    .SimpleInput_input:read-only {
-      background-color: var(--rp-input-bg-color-disabled) !important;
-      border-color: var(--rp-input-border-color-disabled) !important;
     }
 
     .SimpleOptions_option {
@@ -113,11 +108,11 @@
 
     // Border Color
     .AutocompleteOverrides_autocompleteContent:not(.SimpleAutocomplete_errored),
-    .SelectOverrides_selectInput input:not(:read-only),
+    .SelectOverrides_selectInput input,
     .SimpleInput_customValueBlock,
-    .SimpleInput_customValueWrapper .SimpleInput_input:not(:read-only),
-    .SimpleInput_input:focus:not(.SimpleInput_errored):not(:read-only),
-    .SimpleInput_input:hover:not(.SimpleInput_errored):not(:read-only),
+    .SimpleInput_customValueWrapper .SimpleInput_input,
+    .SimpleInput_input:focus:not(.SimpleInput_errored),
+    .SimpleInput_input:hover:not(.SimpleInput_errored),
     .SimpleLink_root,
     .SimpleOptions_option:after {
       background-color: transparent !important;
